[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/2player_versus_container.gd" type="Script" id=1]
[ext_resource path="res://scenes/waiting_for_players_screen.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/roboto_black.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/2player_versus.tscn" type="PackedScene" id=4]

[sub_resource type="CanvasItemMaterial" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="WaitingForPlayersScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="WaitingForPlayersScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="WaitingForPlayersScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Title" type="Label" parent="WaitingForPlayersScreen/VBoxContainer"]
margin_top = 291.0
margin_right = 480.0
margin_bottom = 332.0
custom_fonts/font = ExtResource( 3 )
text = "Looking For Players"
align = 1

[node name="Dots" type="Label" parent="WaitingForPlayersScreen/VBoxContainer"]
margin_top = 336.0
margin_right = 480.0
margin_bottom = 377.0
custom_fonts/font = ExtResource( 3 )
align = 1

[node name="CancelButton" type="Button" parent="WaitingForPlayersScreen/VBoxContainer"]
material = SubResource( 1 )
margin_left = 188.0
margin_top = 381.0
margin_right = 291.0
margin_bottom = 428.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "Cancel"

[node name="TwoPlayerVersus" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="pressed" from="WaitingForPlayersScreen/VBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
